tests/expectations/compiler/core/algorithms/pedersen_fail.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:4:24
     |
   4 |         let a: group = Pedersen64::hash_to_field(1u128); // Pedersen64 hash_to_field returns a field type
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
